--- a/templates/404.html
+++ b/templates/404.html
@@ -3,6 +3,6 @@
 <br>
 <center>
     <h1>404 Error</h1>
-    <p>Page not found - check url</p>
+    <p>Page not found - please check url</p>
 </center>
 {% endblock %}
