--- a/templates/add_user.html
+++ b/templates/add_user.html
@@ -41,6 +41,10 @@
         {{ form.name(class="form-control") }}
         <br/>
 
+        {{ form.username.label(class="form-label") }}
+
+        {{ form.username(class="form-control") }}
+        <br/>
 
         {{ form.email.label(class="form-label") }}
 
