--- a/templates/admin/admin_signup.html
+++ b/templates/admin/admin_signup.html
@@ -33,34 +33,22 @@
 <h1>User List:</h1>
 <br/>
 <div class="shadow p-3 mb-5 bg-body rounded">
-    <form method="POST">
-        {{ form.hidden_tag() }}
-
-        {{ form.name.label(class="form-label") }}
-
-        {{ form.name(class="form-control") }}
-        <br/>
-
-        {{ form.username.label(class="form-label") }}
-
-        {{ form.username(class="form-control") }}
-        <br/>
-
-        {{ form.email.label(class="form-label") }}
-
-        {{ form.email(class="form-control") }}
-        <br/>
-        {{ form.password_hash.label(class="form-label") }}
-
-        {{ form.password_hash(class="form-control") }}
-        <br/>
-        {{ form.password_hash2.label(class="form-label") }}
-
-        {{ form.password_hash2(class="form-control") }}
-        <br/>
-        {{ form.submit(class="btn btn-secondary") }}
-
-
+    <form action="{{ url_for('register') }}" method="post">
+        {% if message is defined and message %}
+            <div class="alert alert-warning">  <strong>  {{ message }} ???? </strong></div>
+        {% endif %}
+        <br>
+        <div class="form-group">
+             Name: <input type="text" class="form-control" id="name" name="name" placeholder="Enter name" name="name">
+        </div>
+        <div class="form-group">
+             Email: <input type="email" class="form-control" id="email" name="email" placeholder="Enter email" name="email">
+        </div>
+        <div class="form-group">
+            Password: <input type="password" class="form-control" id="password" name="password" placeholder="Enter password" name="pswd">
+        </div>
+        <button type="submit" class="btn btn-primary">Register</button>
+        <p class="bottom">Already have an account?  <a class="bottom" href="{{url_for('login')}}"> Login here</a></p>
     </form>
 </div>
 <br/><br/><br/>
