--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,11 +13,92 @@
 {% endfor %}
 
 
-<h1>Dashboard</h1>
-<br/><br/>
-<p>You Are Logged In!</p>
+<h2>Dashboard</h2>
+<br/>
 
-<a href="{{ url_for('logout') }}">Logout</a>
+<div class="card">
+    <div class="card-header">
+        {{ current_user.name }}
+    </div>
+    <div class="card-body">
+
+        <p class="card-text">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-8">
+
+                    <strong>Name:</strong>
+                    {{ current_user.name }}<br/>
+
+                    <strong>Username:</strong>
+                    {{ current_user.username }}<br/>
+
+                    <strong>User Id:</strong>
+                    {{ current_user.id }}<br/>
+
+                    <strong>Email:</strong>
+                    {{ current_user.email }}<br/>
+
+
+                    <strong>Date Joined:</strong>
+                    {{ current_user.date_added }}<br/>
+                    </p>
+                    <a href="{{ url_for('logout')}}" class="btn btn-secondary btn-sm">Logout</a>
+
+
+                    <a href="{{ url_for('delete', id=current_user.id)}}" class="btn btn-danger btn-sm">Delete</a>
+                    <br/><br/>
+
+
+                </div>
+
+
+            </div>
+        </div>
+
+
+    </div>
+</div>
+
+
+<br/>
+
+<div class="card">
+    <div class="card-header">
+        Update Profile
+    </div>
+    <div class="card-body">
+
+        <form action="/dashboard" method="POST" enctype="multipart/form-data">
+            {{ form.hidden_tag() }}
+
+            {{ form.name.label(class="form-label") }}
+
+            {{ form.name(class="form-control", value=name_to_update.name) }}
+            <br/>
+
+            {{ form.username.label(class="form-label") }}
+
+            {{ form.username(class="form-control", value=name_to_update.username) }}
+            <br/>
+
+            {{ form.email.label(class="form-label") }}
+
+            {{ form.email(class="form-control", value=name_to_update.email) }}
+            <br/>
+
+
+            {{ form.submit(class="btn btn-secondary btn-sm") }}
+
+
+        </form>
+
+
+    </div>
+
+
+</div>
 
 
 {% endblock %}
