--- a/templates/home.html
+++ b/templates/home.html
@@ -24,9 +24,9 @@
                                 <br>
                                 <br>
                                 <br>
-                                <h4>SUN blink</h4>
+                                <h4>Welcome to Paradise</h4>
                                 <h3>We know what you love</h3>
-                                <p>Welcome to our hotels</p>
+                                <p>Welcome to our hotel</p>
                                 <div class="agile-its_w3layouts_more menu__item">
                                     <a href="#" class="menu__link" data-toggle="modal" data-target="#myModal">Learn
                                         More</a>
@@ -35,10 +35,6 @@
                         </div>
                     </div>
                 </li>
-                <br>
-                <br>
-                <br>
-                <br>
                 <li>
                     <div class="w3layouts-banner-top w3layouts-banner-top1">
                         <div class="container">
