--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -1,159 +1,105 @@
 {% extends 'base.html' %}
+
 {% block content %}
-<div id="wrapper" >
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-success alert-dismissible fade show" role="alert">
-        {{message}}
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    {% endfor %}
-    <div id="page-wrapper">
-        <div id="page-inner">
-            <div class="row">
-                <div class="col-md-12">
-                    <h1 class="page-header">
-                        RESERVATION <small></small>
-                    </h1>
-                </div>
-            </div>
 
+{% for message in get_flashed_messages() %}
 
-            <div class="row">
-
-                <div class="col-md-5 col-sm-5">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            PERSONAL INFORMATION
-                        </div>
-                        <div class="panel-body">
-                            <form name="form" method="post" action="/reservation">
-                                <div class="form-group">
-                                    <label>Title*</label>
-                                    <select name="title" class="form-control" required>
-                                        <option value selected></option>
-                                        <option value="Dr.">Dr.</option>
-                                        <option value="Miss.">Miss.</option>
-                                        <option value="Mr.">Mr.</option>
-                                        <option value="Mrs.">Mrs.</option>
-                                        <option value="Prof.">Prof.</option>
-                                        <option value="Rev .">Rev .</option>
-                                        <option value="Rev . Fr">Rev . Fr .</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label>First Name</label>
-                                    <input name="fname" class="form-control" required>
-
-                                </div>
-                                <div class="form-group">
-                                    <label>Last Name</label>
-                                    <input name="lname" class="form-control" required>
-
-                                </div>
-                                <div class="form-group">
-                                    <label>Email</label>
-                                    <input name="email" type="email" class="form-control" required>
-
-                                </div>
-                                <div class="form-group">
-                                    <label>Nationality*</label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="nation" value="Indian" checked="">Indian
-                                    </label>
-                                    <label class="radio-inline">
-                                        <input type="radio" name="nation" value="Not indian resident ">Non Indian
-                                    </label>
-
-                                </div>
-
-                                <div class="form-group">
-                                    <label>Phone Number</label>
-                                    <input name="phone" type="text" class="form-control" required>
-                                </div>
-                            </form>
-
-
-                        </div>
-
-                    </div>
-                </div>
-
-
-                <div class="row">
-                    <div class="col-md-6 col-sm-6">
-                        <div class="panel panel-primary">
-                            <div class="panel-heading">
-                                RESERVATION INFORMATION
-                            </div>
-                            <div class="panel-body">
-                                <div class="form-group">
-                                    <label>Type Of Room *</label>
-                                    <select name="troom" class="form-control" required>
-                                        <option value selected></option>
-                                        <option value="Deluxe Room">DELUXE ROOM</option>
-                                        <option value="Guest House">GUEST HOUSE</option>
-                                        <option value="Single Room">SINGLE ROOM</option>
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label>Bedding Type</label>
-                                    <select name="bed" class="form-control" required>
-                                        <option value selected></option>
-                                        <option value="Single">Single</option>
-                                        <option value="Double">Double</option>
-                                        <option value="Triple">Triple</option>
-                                        <option value="Quad">Quad</option>
-                                        <option value="None">None</option>
-
-
-                                    </select>
-                                </div>
-                                <div class="form-group">
-                                    <label>No.of Rooms *</label>
-                                    <select name="nroom" class="form-control" required>
-                                        <option value selected></option>
-                                        <option value="1">1</option>
-                                        <option value="2">2</option>
-                                        <option value="3">3</option>
-                                        <option value="4">4</option>
-                                    </select>
-                                </div>
-
-
-                                <div class="form-group">
-                                    <label>Check-In</label>
-                                    <input name="cin" type="date" class="form-control">
-
-                                </div>
-                                <div class="form-group">
-                                    <label>Check-Out</label>
-                                    <input name="cout" type="date" class="form-control">
-                                </div>
-
-                                <input type="submit" name="submit" value="Submit" class="btn btn-primary">
-
-                            </div>
-
-                        </div>
-                    </div>
-
-
-                    <div class="col-md-12 col-sm-12">
-                        <div class="well">
-
-
-                        </div>
-                    </div>
-                </div>
-
-
-            </div>
-
-
-        </div>
-        <!-- /. PAGE INNER  -->
-    </div>
-    <!-- /. PAGE WRAPPER  -->
+<div class="alert alert-warning alert-dismissible fade show" role="alert">
+    {{ message }}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
+
+
+{% endfor %}
+
+
+{% if name %}
+<h1>Thank you for Booking With us</h1>
+<br/><br/>
+
+<table class="table table-hover table-bordered table-striped">
+
+    {% for our_user in our_user %}
+    <tr>
+        <td>{{ our_user.id }}. {{ our_user.name }} - {{ our_user.email }} -
+            <a href="{{ url_for('delete', id=our_user.id)}}">Delete</a></td>
+    </tr>
+    {% endfor %}
+
+</table>
+
+
+{% else %}
+<h1>Reservation</h1>
+<br/>
+<div class="shadow p-3 mb-5 bg-body rounded">
+    <form method="POST">
+        {{ form.hidden_tag() }}
+
+        {{ form.Title.label(class="form-label") }}
+
+        {{ form.Title(class="form-control") }}
+        <br/>
+
+        {{ form.first_name.label(class="form-label") }}
+
+        {{ form.first_name(class="form-control") }}
+        <br/>
+
+        {{ form.last_name.label(class="form-label") }}
+
+        {{ form.last_name(class="form-control") }}
+        <br/>
+        {{ form.email.label(class="form-label") }}
+
+        {{ form.email(class="form-control") }}
+        <br/>
+        {{ form.nationality.label(class="form-label") }}
+
+        {{ form.nationality(class="form-control") }}
+                <br/>
+        {{ form.phone.label(class="form-label") }}
+
+        {{ form.phone(class="form-control") }}
+                <br/>
+        {{ form.type_of_room.label(class="form-label") }}
+
+        {{ form.type_of_room(class="form-control") }}
+                        <br/>
+        {{ form.Bedding_Type.label(class="form-label") }}
+
+        {{ form.Bedding_Type(class="form-control") }}
+                        <br/>
+        {{ form.Number_of_rooms.label(class="form-label") }}
+
+        {{ form.Number_of_rooms(class="form-control") }}
+                        <br/>
+        {{ form.check_in.label(class="form-label") }}
+
+        {{ form.check_in(class="form-control") }}
+                        <br/>
+        {{ form.check_out.label(class="form-label") }}
+
+        {{ form.check_out(class="form-control") }}
+        <br/>
+        {{ form.submit(class="btn btn-secondary") }}
+
+
+    </form>
+</div>
+<br/><br/><br/>
+<table class="table table-hover table-bordered table-striped">
+
+    {% for our_user in our_user %}
+    <tr>
+        <td>{{ our_user.id }}. {{ our_user.name }} - {{ our_user.email }} -
+            <a href="{{ url_for('delete', id=our_user.id)}}">Delete</a>
+        </td>
+    </tr>
+    {% endfor %}
+
+</table>
+
+{% endif %}
 
 {% endblock %}
