--- a/templates/home.html
+++ b/templates/home.html
@@ -9,6 +9,12 @@
         background-size: cover;
 
     }
+    .white-text {
+  color: white;
+}
+    .red-text {
+  color: red;
+}
 </style>
 {% endblock %}
 <div id="home" class="w3ls-banner" align="center"  >
@@ -24,13 +30,9 @@
                                 <br>
                                 <br>
                                 <br>
-                                <h4>Welcome to Paradise</h4>
-                                <h3>We know what you love</h3>
-                                <p>Welcome to our hotel</p>
-                                <div class="agile-its_w3layouts_more menu__item">
-                                    <a href="#" class="menu__link" data-toggle="modal" data-target="#myModal">Learn
-                                        More</a>
-                                </div>
+                                <h4 class="white-text">Welcome to Paradise</h4>
+                                <h3 class="white-text">We know what you love</h3>
+                                <p class="white-text">Welcome to our hotel</p>
                             </div>
                         </div>
                     </div>
@@ -39,13 +41,9 @@
                     <div class="w3layouts-banner-top w3layouts-banner-top1">
                         <div class="container">
                             <div class="agile-its-banner-info">
-                                <h4>Shoneee</h4>
-                                <h3>Stay with friends & families</h3>
-                                <p>Come & enjoy precious moment with us</p>
-                                <div class="agile-its_w3layouts_more menu__item">
-                                    <a href="#" class="menu__link" data-toggle="modal" data-target="#myModal">Learn
-                                        More</a>
-                                </div>
+                                <h4 class="white-text">LETS GO</h4>
+                                <h3 class="white-text">Stay with friends & families</h3>
+                                <p class="white-text">Come & enjoy precious moment with us</p>
                             </div>
                         </div>
                     </div>
@@ -54,13 +52,14 @@
                     <div class="w3layouts-banner-top w3layouts-banner-top2">
                         <div class="container">
                             <div class="agile-its-banner-info">
+                                <br>
+                                <br>
+                                <br>
+                                <br>
                                 <h4></h4>
                                 <h3>want luxurious vacation?</h3>
-                                <p>Get accommodation today</p>
-                                <div class="agile-its_w3layouts_more menu__item">
-                                    <a href="#" class="menu__link" data-toggle="modal" data-target="#myModal">Learn
-                                        More</a>
-                                </div>
+                                <p >Get accommodation today</p>
+                                <a href="/login" class="red-text"> Login</a>
                             </div>
                         </div>
                     </div>
