--- a/templates/room_price.html
+++ b/templates/room_price.html
@@ -16,7 +16,7 @@
               <li>Offers For Next Time</li>
 
             </ul>
-            <button type="button" class="w-100 btn btn-lg btn-outline-primary">Book</button>
+            <button type="button" class="w-100 btn btn-lg btn-outline-primary" onclick="login.html">Book</button>
           </div>
         </div>
       </div>
